Tarea 2/frontend-challenge-base/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-app
  namespace: my-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: nextjs-app
